[package]
name = "eater_rangeset"
description = "Simple library to work with set's of ranges"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
smallvec = { version = "1", optional = true, features = ["const_new"] }
serde = { version = "1", optional = true }

[features]
default = ["smallvec"]
smallvec = ["dep:smallvec"]
serde = ["dep:serde", "smallvec/serde"]

[badges.codecov]
repository = "cijber/rangeset"

[badges.github]
repository = "cijber/rangeset"
workflow = "rust.yml"
